--- a/site/wp-content/themes/catapult/sass/_catapult-casestudies.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-casestudies.scss
@@ -176,10 +176,12 @@
                     top: 40px;
                 }
                 
-                &.prev:hover img {
+                &.prev:hover img,
+                &.prev:focus img {
                     margin-left: 10px;
                 }
-                &.next:hover img {
+                &.next:hover img,
+                &.next:focus img {
                     margin-left: 20px;
                 }
                 
