--- a/site/wp-content/themes/catapult/sass/_catapult-header.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-header.scss
@@ -193,6 +193,10 @@ html.no-svg
         display: inline-block;
         padding: 10px 0 7px 50px;
         
+        &:focus {
+            border: 1px solid white;
+        }
+        
         // iPhone
         @media only screen
             and (max-width : 720px) {
@@ -273,15 +277,17 @@ html.no-svg
         
         .mainnav-item-link {
             font-size: 1.6em;
+            color: rgb(105,94,74);
             
-            @media only screen 
-                and (max-width : 720px) {
+            @media only screen and (max-width: 720px) {
                 font-size: 1em;
                 color: darken($orange, 30%);
             }
             
             &:hover,
-            &.active {
+            &.active, 
+            &:focus {
+                outline: none;
                 color: white;
                 @include textShadow(-1px, -1px, 0px, rgba(0,0,0,0.3));
             }
