--- a/site/wp-content/themes/catapult/sass/_catapult-team.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-team.scss
@@ -29,6 +29,10 @@
             position: relative;
             margin: 1%;
             
+            a {
+                text-decoration: none;
+            }
+            
             img {
                 border: 2px solid;
                 width: 98%;
@@ -62,7 +66,6 @@
                     font-size: 1.1em;
                 }
             }
-            
             h4 {
                 font-size: 1.1em;
             }
@@ -73,6 +76,10 @@
             @media only screen and (max-width: 422px) {
                 margin: 2%;
                 width: 46%;
+            }
+            
+            p {
+                text-decoration: none;
             }
         }
         
