--- a/site/wp-content/themes/catapult/sass/_catapult-intro.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-intro.scss
@@ -73,6 +73,17 @@
   .slideshow-image {
     width: 100%;
   }
+  
+  .slideshow-caption {
+    position: absolute;
+    z-index: 10;
+    color: black;
+    bottom: 0;
+    margin: 0;
+    background: rgba(255,255,255,0.5);
+    width: 100%;
+    padding: 5px;
+  }
 
   /* Media quires for a responsive layout */
 
