--- a/site/wp-content/themes/catapult/css/blog.css
+++ b/site/wp-content/themes/catapult/css/blog.css
@@ -510,6 +510,11 @@ textarea {
 /* --------------------------------
     Common Elements
 -------------------------------- */
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
 body {
   background: url(../img/homepage/bg/bgtile.jpg) top left repeat #666666;
   font-size: 15px;
@@ -1231,7 +1236,7 @@ html.no-svg .header .logo {
   padding: 0;
   margin: 0;
   position: fixed;
-  z-index: 999; }
+  z-index: 1001; }
   .header.compact {
     -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
