--- a/site/wp-content/themes/catapult/sass/_catapult-common.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-common.scss
@@ -2,6 +2,12 @@
     Common Elements
 -------------------------------- */
 
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
     background: url(../img/homepage/bg/bgtile.jpg) top left repeat #666;
     font-size: 15px;
