--- a/site/wp-content/themes/catapult/sass/_catapult-common.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-common.scss
@@ -159,6 +159,12 @@ section {
 .level-three {
     color: $teal;
 }
+.level-four {
+  color: $yellow;
+}
+.level-five {
+  color: $purple;
+}
 
 .row {
     width: 900px;
