--- a/site/wp-content/themes/catapult/css/faq.css
+++ b/site/wp-content/themes/catapult/css/faq.css
@@ -544,7 +544,7 @@ select {
   height: 24px; }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.75em;
   text-align: center;
   font-weight: normal; }
 
@@ -562,6 +562,15 @@ h5 {
 
 a {
   color: #f2ad4b; }
+
+hr {
+  display: block;
+  border: 0;
+  width: 100%;
+  height: 2px;
+  margin: 10px 0 0 0;
+  padding: 0;
+  background: url(../img/divider.png) top left repeat-x; }
 
 .clicky-button {
   overflow: visible;
@@ -652,7 +661,7 @@ a.fancy {
   color: #84b6b4; }
 
 .page-top {
-  padding-top: 128px; }
+  padding-top: 80px; }
 
 section:first-of-type {
   background: none; }
@@ -1481,19 +1490,6 @@ html.no-svg .header .logo {
       /* IE6-8 */ }
     #page-wrap #main-aside .contact-button {
       min-width: 244px; }
-  #page-wrap hr {
-    display: block;
-    border: 0;
-    width: 100%;
-    height: 1px;
-    margin: 40px 0;
-    background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0) 0%, #e3dcd8 10%, #e3dcd8 90%, rgba(0, 0, 0, 0) 100%);
-    background-image: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(10%, #e3dcd8), color-stop(90%, #e3dcd8), color-stop(100%, rgba(0, 0, 0, 0)));
-    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0%, #e3dcd8 10%, #e3dcd8 90%, rgba(0, 0, 0, 0) 100%);
-    background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0) 0%, #e3dcd8 10%, #e3dcd8 90%, rgba(0, 0, 0, 0) 100%);
-    background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0) 0%, #e3dcd8 10%, #e3dcd8 90%, rgba(0, 0, 0, 0) 100%);
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #e3dcd8 10%, #e3dcd8 90%, rgba(0, 0, 0, 0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='rgba(0, 0, 0, 0)', endColorstr='#e3dcd8',GradientType=1 ); }
   #page-wrap .twitter-list {
     list-style: none;
     padding: 0;
