--- a/site/wp-content/themes/catapult/css/thanks.css
+++ b/site/wp-content/themes/catapult/css/thanks.css
@@ -544,7 +544,7 @@ select {
   height: 24px; }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.75em;
   text-align: center;
   font-weight: normal; }
 
@@ -562,6 +562,15 @@ h5 {
 
 a {
   color: #f2ad4b; }
+
+hr {
+  display: block;
+  border: 0;
+  width: 100%;
+  height: 2px;
+  margin: 10px 0 0 0;
+  padding: 0;
+  background: url(../img/divider.png) top left repeat-x; }
 
 .clicky-button {
   overflow: visible;
@@ -652,7 +661,7 @@ a.fancy {
   color: #84b6b4; }
 
 .page-top {
-  padding-top: 128px; }
+  padding-top: 80px; }
 
 section:first-of-type {
   background: none; }
